RESOLVED FIXED217305
[LFC][Floats] Do not assert when right aligned float overflows the containing block on the left
https://bugs.webkit.org/show_bug.cgi?id=217305
Summary [LFC][Floats] Do not assert when right aligned float overflows the containing...
alan
Reported 2020-10-04 19:25:44 PDT
it's fine.
Attachments
Patch (5.14 KB, patch)
2020-10-04 19:30 PDT, alan
no flags
alan
Comment 1 2020-10-04 19:30:45 PDT
EWS
Comment 2 2020-10-04 21:40:24 PDT
Committed r267955: <https://trac.webkit.org/changeset/267955> All reviewed patches have been landed. Closing bug and clearing flags on attachment 410498 [details].
Radar WebKit Bug Importer
Comment 3 2020-10-04 21:41:18 PDT
Note You need to log in before you can comment on or make changes to this bug.