[LFC][Floats] Do not assert when right aligned float overflows the containing block on the left https://bugs.webkit.org/show_bug.cgi?id=217305

Reviewed by Antti Koivisto.

Source/WebCore:

It's okay for a float: right; to overflow the containing block on the left.
In such cases let's just constrain the logical right value by the logical left edge.

Test: fast/layoutformattingcontext/intrusive-floats-takes-entire-horizontal-space.html

* layout/inlineformatting/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::constraintsForLine):

LayoutTests:

* fast/layoutformattingcontext/intrusive-floats-takes-entire-horizontal-space-expected.html: Added.
* fast/layoutformattingcontext/intrusive-floats-takes-entire-horizontal-space.html: Added.


Canonical link: https://commits.webkit.org/230064@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267955 268f45cc-cd09-0410-ab3c-d52691b4dbfc